screen: set the output frame rate based on the fps

Fixes #14646

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>